--- a/about.html
+++ b/about.html
@@ -128,14 +128,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link" aria-current="page" href="#" data-bs-toggle="dropdown">Contact<i class="fa-solid 
-                   fa-chevron-down"></i></a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">shop-1</a></li>
-                    <li><a class="dropdown-item" href="#">shop-2</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">shop-3</a></li>
-                </ul>
+                <a class="nav-link" aria-current="page" href="contact.html">Contact</a>
               </li>
             </ul>
             <div class="navber_icon ">
