--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Blog Details</title>
     <!-- google fonts links  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -158,163 +158,102 @@
     </nav>
     <!-- Nav section end  -->
     <!-- Banner section start  -->
-    <section id="blog_banner">
+    <section id="contact_banner">
         <div class="container h-100">
            <div class="row h-100 justify-content-center align-items-center">
-             <div class="col-lg-3 blog_banner_content text-center">
-               <h2>Blog</h2>
-               <p><span><a href="index.html">Home</a></span>  /  Blog</p>
-           </div>
+              <div class="col-lg-4 contact_banner_content text-center">
+               <h2>Contact</h2>
+               <p><span><a href="index.html">Home</a></span>  /  Contact</p>
+              </div>
            </div>
         </div>
      </section>
     <!-- Banner section end  -->
-    <!-- Blog Box section start  -->
-    <section id="blog_box">
-        <div class="container">
-            <div class="row g-0">
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-1.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Color, Size, Material Swatches</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
+    <!-- Contact Info section start  -->
+    <section id="contact_info">
+       <div class="container">
+          <div class="row">
+             <div class="col-lg-4 contact_info_item d-flex shadow g-0">
+                <div class="font">
+                  <i class="fa-solid fa-phone"></i>
                 </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-2.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion coats 2022: key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
+                <div class="contact_info_item_content">
+                  <h4>Call to Us:</h4>
+                  <p>We're available from 08 am - 10 pm
+                    USA,7 days a week.</p>
+                  <h5>Customer Support:</h5>
+                  <a href="callto:+13008660286">+13008660286</a>
+                  <h5>Head Office Support:</h5>
+                  <a href="callto:+13008660290">+13008660290</a>
                 </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-3.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion Women Long Skat</a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
+             </div>
+             <div class="col-lg-4 contact_info_item d-flex shadow g-0">
+                <div class="font">
+                  <i class="fa-solid fa-envelope"></i>
                 </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-4.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Minimal Design Inspiration</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
+                <div class="contact_info_item_content">
+                  <h4>Write to Email Us:</h4>
+                  <p>Fill out our form and we will contact you
+                    within 24 hours.</p>
+                  <h5>Customer Support:</h5>
+                  <a href="mailto:aetor.info@gmail.com">aetor.info@gmail.com</a>
+                  <h5>Head Office Support:</h5>
+                  <a href="mailto:aetorhead.@example.com">aetorhead.@example.com</a>
                 </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-5.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion T-shirt 2022: key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
+             </div>
+             <div class="col-lg-4 contact_info_item d-flex shadow g-0">
+                <div class="font">
+                  <i class="fa-brands fa-battle-net"></i>
                 </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-6.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Women Stylish Bag & Shose</a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-7.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Women Fashionable Coats 2022</a></h4>
-                          <p>Authoritatively innovate reliable users for team building intellectual capital. Assertively.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-8.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">Fashion Women New key trends</a></h4>
-                          <p>Progressively productize installed base testing procedures whereas resource.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 blog_box_item">
-                    <div class="card" style="width: 350px;">
-                        <div class="card_img">
-                            <img src="img/blog-s-3-9.png" class="card-img-top" alt="...">
-                            <a href="#">January 04, 2022</a>
-                        </div>
-                        <div class="card-body">
-                            <h4><a href="#">New Trends Hudi Sweater </a></h4>
-                          <p>Compellingly monetize customized channels with distributed manufactured products.</p>
-                          <a href="#" class="read_more">read more<i class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row justify-content-between">
-               <div class="col-lg-2">
-                  <div class="blog_post_showing">
-                     <p>Showing 9 of 16 Post</p>
+                <div class="contact_info_item_content">
+                  <h4>Follow to Us:</h4>
+                  <p>Visit specific sites to find us online  innovate bricks-and-clicks materials.</p>
+                  <h5>Customer Support:</h5>
+                  <div class="media">
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest-p"></i></a>
                   </div>
-               </div>
-               <div class="col-lg-4">
-                  <div class="blog_post_btn">
-                  <nav aria-label="Page navigation example">
-                    <ul class="pagination">
-                      <li class="page-item"><a class="page-link" href="#"><i class="fa-solid fa-arrow-left-long"></i>Pre</a></li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
-                      <li class="page-item"><a class="page-link" href="#">Next<i class="fa-solid fa-arrow-right-long"></i></a></li>
-                    </ul>
-                  </nav>
+                  <h5>Head Office Support:</h5>
+                  <div class="media">
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.pinterest.com" target="_blank"><i class="fa-brands fa-pinterest-p"></i></a>
                   </div>
-               </div>
-            </div>
-        </div>
+                </div>
+             </div>
+          </div>
+       </div>
     </section>
-    <!-- Blog Box section end  -->
+    <!-- Contact Info section end  -->
+    <!-- Contact From section start  -->
+    <section id="contact_form">
+       <div class="container">
+         <div class="row">
+            <div class="col-lg-6 contact_form_item shadow">
+               <h3>Get in touch</h3>
+               <form action="">
+                 <div class="input d-flex">
+                    <input type="text" placeholder="Your Name *" required>
+                    <input type="email" placeholder="Your Email *" required>
+                 </div>
+                 <div class="input d-flex">
+                    <input type="phone" placeholder="Phone Number *" required>
+                    <input type="text" placeholder="Your Title *" required>
+                 </div>
+                 <textarea placeholder="Massage *" class="w-100" required ></textarea>
+                 <button type="submit">Send Massage</button>
+               </form>
+            </div>
+            <div class="col-lg-6 contact_form_img">
+               
+            </div>
+         </div>
+       </div>
+    </section>
+    <!-- Contact From section end  -->
 
 
 
